--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>4.81</version>
+    <version>4.83</version>
     <relativePath/>
   </parent>
 
@@ -58,8 +58,8 @@
     <dependencies>
       <dependency>
         <groupId>io.jenkins.tools.bom</groupId>
-        <artifactId>bom-2.440.x</artifactId>
-        <version>2982.vdce2153031a_0</version>
+        <artifactId>bom-weekly</artifactId>
+        <version>3135.v6d6c1f6b_3572</version>
         <scope>import</scope>
         <type>pom</type>
       </dependency>
